--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.90.2",
+    "bcrypt": "^6.0.0",
     "daisyui": "^5.1.29",
+    "dotenv": "^17.2.3",
     "formik": "^2.4.6",
+    "jose": "^6.1.0",
     "next": "15.5.4",
+    "pg-pool": "^3.10.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-icons": "^5.5.0",
     "react-toastify": "^11.0.5",
     "yup": "^1.7.1"
   },
@@ -22,6 +27,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.1.14",
     "@tanstack/eslint-plugin-query": "^5.91.0",
+    "@types/bcrypt": "^6.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
