--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^17.2.3",
     "formik": "^2.4.6",
     "jose": "^6.1.0",
+    "jsonwebtoken": "^9.0.2",
     "next": "15.5.4",
     "pg-pool": "^3.10.1",
     "react": "19.1.0",
@@ -28,11 +29,14 @@
     "@tailwindcss/postcss": "^4.1.14",
     "@tanstack/eslint-plugin-query": "^5.91.0",
     "@types/bcrypt": "^6.0.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
+    "i": "^0.3.7",
+    "npm": "^11.6.1",
     "tailwindcss": "^4.1.14",
     "typescript": "^5"
   }
