--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "formik": "^2.4.6",
     "jose": "^6.1.0",
     "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.15.2",
     "next": "15.5.4",
     "pg-pool": "^3.10.1",
     "react": "19.1.0",
