Add Navigations and Statistics components to dashboard
Introduces Navigations and Statistics components for improved dashboard structure and navigation. Updates dashboard layout to use CookiesProvider and modifies font to monospace in globals.css. Refactors login to use PasswordInput and updates middleware to use KEY environment variable. Adds next-client-cookies and js-cookie dependencies.

--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "dotenv": "^17.2.3",
     "formik": "^2.4.6",
     "jose": "^6.1.0",
+    "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.15.2",
     "next": "15.5.4",
+    "next-client-cookies": "^2.1.0",
     "pg-pool": "^3.10.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
