--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.90.2",
+    "@types/js-cookie": "^3.0.6",
     "bcrypt": "^6.0.0",
     "daisyui": "^5.1.29",
     "dotenv": "^17.2.3",
