--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tanstack/react-query": "^5.90.2",
     "@types/js-cookie": "^3.0.6",
+    "@typescript-eslint/eslint-plugin": "^8.46.2",
     "bcrypt": "^6.0.0",
     "dotenv": "^17.2.3",
     "formik": "^2.4.6",
